Enhancing services and controllers